Fixed dodgy text wrapping.

--- a/javascript/example/styles.css
+++ b/javascript/example/styles.css
@@ -150,6 +150,9 @@ input:focus {
 #desc {
     position: relative;
     margin: 20px;
+}
+
+#desc_label {
     font-size: 14px;
 }
 
